Set to Java 9